--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@ http://www.tooplate.com/view/2075-digital-team
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">Digital Team</a>
+			<a href="#" class="navbar-brand">CiberHood</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#home" class="smoothScroll">HOME</a></li>
-				<li><a href="#work" class="smoothScroll">WORK</a></li>
-				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-				<li><a href="#team" class="smoothScroll">TEAM</a></li>
+				<li><a href="#home" class="smoothScroll">INICIO</a></li>
+				<li><a href="#work" class="smoothScroll">TRABAJOS</a></li>
+				<li><a href="#about" class="smoothScroll">ACERCA</a></li>
+				<li><a href="#team" class="smoothScroll">EQUIPO</a></li>
 				<li><a href="#portfolio" class="smoothScroll">PORTFOLIO</a></li>
-				<li><a href="#pricing" class="smoothScroll">PRICING</a></li>
-				<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
+				<li><a href="#pricing" class="smoothScroll">PRECIOS</a></li>
+				<li><a href="#contact" class="smoothScroll">CONTACTO</a></li>
 			</ul>
 		</div>
 	</div>
@@ -73,11 +73,11 @@ http://www.tooplate.com/view/2075-digital-team
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h3>WEB DESIGN / WEB DEVELOPMENT / SOCIAL MEDIA</h3>
-				<h1>DIGITAL TEAM</h1>
+				<h3>DESARROLLO WEB / DESARROLLO DE INFRAESTRUCUTRAS DIGITALES PARA PYMES / SERVICIOS INFORMÁTICOS PARA PARTICULARES</h3>
+				<h1>CIBERHOOD</h1>
 				<hr>
-				<a href="#work" class="smoothScroll btn btn-danger">What we do</a>
-				<a href="#contact" class="smoothScroll btn btn-default">Talk to us</a>
+				<a href="#work" class="smoothScroll btn btn-danger">¿Qué hacemos?</a>
+				<a href="#contact" class="smoothScroll btn btn-default">Contáctenos</a>
 			</div>
 		</div>
 	</div>		
@@ -90,7 +90,7 @@ http://www.tooplate.com/view/2075-digital-team
 			<div class="col-md-12 col-sm-12">
 				<div class="section-title">
 					<strong>01</strong>
-					<h1 class="heading bold">WHAT WE DO</h1>
+					<h1 class="heading bold">¿QUÉ HACEMOS?</h1>
 					<hr>
 				</div>
 			</div>
