--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ http://www.tooplate.com/view/2075-digital-team
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<h3>DESARROLLO WEB / DESARROLLO DE INFRAESTRUCUTRAS DIGITALES PARA PYMES / SERVICIOS INFORMÁTICOS PARA PARTICULARES</h3>
-				<h1>CIBERHOOD</h1>
+				<h1>CIBERHOOD / DESARROLLO DE APLICACIONES MÓVILES / ASESORAMIENTO INFORMÁTICO</h1>
 				<hr>
 				<a href="#work" class="smoothScroll btn btn-danger">¿Qué hacemos?</a>
 				<a href="#contact" class="smoothScroll btn btn-default">Contáctenos</a>
