--- a/index.html
+++ b/index.html
@@ -2,18 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Digital Team HTML5 Layout - Tooplate</title>
+	<title>CiberHood, tu tienda de servicios digitales en Lavapiés</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-<!--
-
-Template 2075 Digital Team
-
-http://www.tooplate.com/view/2075-digital-team
-
--->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
@@ -56,10 +49,10 @@ http://www.tooplate.com/view/2075-digital-team
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#home" class="smoothScroll">INICIO</a></li>
-				<li><a href="#work" class="smoothScroll">TRABAJOS</a></li>
-				<li><a href="#about" class="smoothScroll">ACERCA</a></li>
-				<li><a href="#team" class="smoothScroll">EQUIPO</a></li>
+				<li><a href="#inicio" class="smoothScroll">INICIO</a></li>
+				<li><a href="#wedo" class="smoothScroll">TRABAJOS</a></li>
+				<li><a href="#tienda" class="smoothScroll">TIENDA</a></li>
+				<li><a href="#equipo" class="smoothScroll">EQUIPO</a></li>
 				<li><a href="#portfolio" class="smoothScroll">PORTFOLIO</a></li>
 				<li><a href="#pricing" class="smoothScroll">PRECIOS</a></li>
 				<li><a href="#contact" class="smoothScroll">CONTACTO</a></li>
@@ -69,12 +62,12 @@ http://www.tooplate.com/view/2075-digital-team
 </section>
 
 <!-- home section -->
-<section id="home">
+<section id="inicio">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-                                <h1>CIBERHOOD</h1>
-				<h3>DESARROLLO WEB / DESARROLLO DE INFRAESTRUCUTRAS DIGITALES PARA PYMES / SERVICIOS INFORMÁTICOS PARA PARTICULARES / DESARROLLO DE APLICACIONES MÓVILES / ASESORAMIENTO INFORMÁTICO</h3>
+                                <h1>CiberHood</h1>
+				<h3>Tu tienda de servicios digitales en el corazón de Madrid</h3>
 				<hr>
 				<a href="#work" class="smoothScroll btn btn-danger">¿Qué hacemos?</a>
 				<a href="#contact" class="smoothScroll btn btn-default">Contáctenos</a>
@@ -84,7 +77,7 @@ http://www.tooplate.com/view/2075-digital-team
 </section>
 
 <!-- work section -->
-<section id="work">
+<section id="wedo">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
@@ -96,52 +89,52 @@ http://www.tooplate.com/view/2075-digital-team
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
 				<i class="icon-cloud medium-icon"></i>
-					<h3>WEB MARKETING</h3>
+					<h3>SERVICIOS DE RED PARA PYMES</h3>
 					<hr>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
+					<p>Puesta a punto de servidores web, servidores de correo, servidores de mensajería, servidores de almacenamiento...</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
 				<i class="icon-mobile medium-icon"></i>
-					<h3>UI &amp; UX DESIGN</h3>
+					<h3>DISEÑO &amp; DESARROLLO WEB Y DE APLICACIONES</h3>
 					<hr>
-					<p>Digital Team is free responsive Bootstrap v3.3.5 layout from <a rel="nofollow" href="http://www.tooplate.com" target="_parent">Tooplate</a>. Images are from <a rel="nofollow" href="http://pixabay.com" target="_parent">Pixabay</a> free photo website.</p>
+					<p>Diseñamos y desarrollamos tu sitio web y tus aplicaciones para diversas plataformas.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class="icon-laptop medium-icon"></i>
-					<h3>ECOMMERCE</h3>
+					<h3>CLÍNICA DIGITAL</h3>
 					<hr>
-					<p>You can edit and use this template for your websites. Please tell your friends about Tooplate. Thank you for visiting our website.</p>
+					<p>Diagnóstico, presupuestado y reparación de dispositivos y entornos tanto en nuestras instalaciones como a domicilio</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class="icon-compass medium-icon"></i>
-					<h3>MOBILE APP</h3>
+					<h3></h3>
 					<hr>
 					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class="icon-chat medium-icon"></i>
-					<h3>SOCIAL MEDIA</h3>
+					<h3>ASESORAMIENTO INFORMÁTICO PARA PYMES Y PARTICULARES</h3>
 					<hr>
-					<p>You can easily change icons by looking at <a href="https://www.elegantthemes.com/blog/resources/how-to-use-and-embed-an-icon-font-on-your-website" target="_blank">ET Line Icons</a>. Excepteu sunt in culpa qui officia. Duis aute irure dolor in reprehenderit.</p>
+					<p>¿Necesitas consejo sobre cómo sacar más partido a las tecnologías con las que te enfrentas cada día? Te ayudamos a comprender mejor lo que necesitas y cómo utilizarlo.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class="icon-browser medium-icon"></i>
-					<h3>RESPONSIVE LAYOUT</h3>
+					<h3>GESTIONES ON-LINE</h3>
 					<hr>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
+					<p>Contacta con nosotros en la web y nos pondremos en contacto contigo sin necesitar que nos visites. Comprueba on-line el estado de tu pedido.</p>
 			</div>
 		</div>
 	</div>
 </section>
 
 <!-- about section -->
-<section id="about">
+<section id="tienda">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
 				<div class="section-title">
 					<strong>02</strong>
-					<h1 class="heading bold">OUR AGENCY</h1>
+					<h1 class="heading bold">NUESTRAS INSTALACIONES</h1>
 					<hr>
 				</div>
 			</div>
@@ -149,27 +142,27 @@ http://www.tooplate.com/view/2075-digital-team
 				<img src="images/about-img.jpg" class="img-responsive" alt="about img">
 			</div>
 			<div class="col-md-6 col-sm-12">
-				<h3 class="bold">DIGITAL TEAM</h3>
-				<h1 class="heading bold">Best Design Agency from California</h1>
+				<h3 class="bold">CiberHood</h3>
+				<h1 class="heading bold">En Tirso de Molina, a tan sólo 5 minutos de la Puerta del Sol</h1>
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs" role="tablist">
-					<li class="active"><a href="#design" aria-controls="design" role="tab" data-toggle="tab">DESIGN</a></li>
-					<li><a href="#mobile" aria-controls="mobile" role="tab" data-toggle="tab">MOBILE</a></li>
-					<li><a href="#social" aria-controls="social" role="tab" data-toggle="tab">SOCIAL</a></li>
+					<li class="active"><a href="#comercio" aria-controls="comercio" role="tab" data-toggle="tab">COMERCIO</a></li>
+					<li><a href="#locutorio" aria-controls="locutorio" role="tab" data-toggle="tab">LOCUTORIO</a></li>
+					<li><a href="#hospital" aria-controls="hosptal" role="tab" data-toggle="tab">REPARACIONES</a></li>
 				</ul>
 				<!-- tab panes -->
 				<div class="tab-content">
-					<div role="tabpanel" class="tab-pane active" id="design">
-						<p>Duis aute irure dolor in <a href="#">reprehenderit</a> in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed id est tincidunt, iaculis nulla vel, sodales metus. Morbi interdum accumsan augue, in accumsan neque lacinia sed. Fusce cursus eu ligula ut gravida.</p>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+					<div role="tabpanel" class="tab-pane active" id="comercio">
+						<p>Venta de componentes informáticos (Hardware & Software) en nuestra tienda. Serás atendido y asesorado en las mejores condiciones por nuestros trabajadores y trabajadoras.</p>
+						<p></p>
 					</div>
-					<div role="tabpanel" class="tab-pane" id="mobile">
-						<p>Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-						<p><a href="#">Duis aute irure dolor</a> in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
+					<div role="tabpanel" class="tab-pane" id="locutorio">
+						<p>También puedes visitarnos para hacer tus recargas de telefonía prepago y para hacer tus envíos de dinero al extranjero (para esto último se requiere identificaión).</p>
+						<p>Además podrás utilizar nuestra red en local para todo tipo de usos (navegación, mensajería, transferencias de archivos, juegos on-line...)</p>
 					</div>
-					<div role="tabpanel" class="tab-pane" id="social">
-						<p>Pellentesque elementum, lacus sit amet <a href="#">hendrerit</a> posuere, quam quam tristique nisi, nec ornare ligula magna id nisl. Donec blandit enim ac semper facilisis. Curabitur eu laoreet mauris, eget fermentum velit.</p>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+					<div role="tabpanel" class="tab-pane" id="hospital">
+						<p>Trae los dispositvos que te estén dando problemas y nosotros los diagnosticaremos y repararemos lo antes posible a un precio competente.</p>
+						<p>Pide cita on-line con uno de nuestros ingenieros, tanto para encontraros en nuestra tienda como también a domicilio.</p>
 					</div>
 
 				</div>
@@ -179,13 +172,13 @@ http://www.tooplate.com/view/2075-digital-team
 </section>
 
 <!-- team section -->
-<section id="team">
+<section id="equipo">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<div class="section-title">
 					<strong>03</strong>
-					<h1 class="heading bold">TALENTED TEAM</h1>
+					<h1 class="heading bold">NUESTRO EQUIPO</h1>
 					<hr>
 				</div>
 			</div>
@@ -378,20 +371,23 @@ http://www.tooplate.com/view/2075-digital-team
 			<div class="col-md-12 col-sm-12 text-center">
 				<div class="section-title">
 					<strong>06</strong>
-					<h1 class="heading bold">CONTACT US</h1>
+					<h1 class="heading bold">CONTÁCTANOS</h1>
 					<hr>
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-12 contact-info">
-				<h2 class="heading bold">CONTACT INFO</h2>
-				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia deserunt mollit anim id.</p>
+				<h2 class="heading bold">INFORMACIÓN DE CONTACTO</h2>
+				<p>CiberHood Lavapiés </p>
+                                <p>Calle Amparo Nº8, 28012</p>
+                                <p>MADRID</p>
+                                <p>Metro: Tirso de Molina (L1), Lavapiés (L3)</p>
 				<div class="col-md-6 col-sm-4">
 					<h3><i class="icon-envelope medium-icon wow bounceIn" data-wow-delay="0.6s"></i> EMAIL</h3>
-					<p>hello@company.com</p>
+					<p>info@ciberhood.com</p>
 				</div>
 				<div class="col-md-6 col-sm-4">
-					<h3><i class="icon-phone medium-icon wow bounceIn" data-wow-delay="0.6s"></i> PHONES</h3>
-					<p>010-020-0340 | 090-080-0760</p>
+					<h3><i class="icon-phone medium-icon wow bounceIn" data-wow-delay="0.6s"></i> TELÉFONOS</h3>
+					<p>(+34) 91 XXX XXXXX</p><p>(+34) 6XX XXX XXX</p>
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-12">
@@ -419,7 +415,7 @@ http://www.tooplate.com/view/2075-digital-team
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<p>Copyright © Digital Team HTML5 Template | Design: <a href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
+				<p>Copyright © CiberHood</p>
 				<hr>
 				<ul class="social-icon">
 					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
