--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <h1>CiberHood</h1>
 				<h3>Tu tienda de servicios digitales en el corazón de Madrid</h3>
 				<hr>
-				<a href="#work" class="smoothScroll btn btn-danger">¿Qué hacemos?</a>
+				<a href="#wedo" class="smoothScroll btn btn-danger">¿Qué hacemos?</a>
 				<a href="#contact" class="smoothScroll btn btn-default">Contáctenos</a>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class="icon-compass medium-icon"></i>
-					<h3></h3>
+					<h3>HOLA CARACOLA</h3>
 					<hr>
 					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
 			</div>
