Plantilla casi finiquitada

--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
 			<div class="col-md-12 col-sm-12">
 				<div class="section-title">
 					<strong>04</strong>
-					<h1 class="heading bold">OUR PORTFOLIO</h1>
+					<h1 class="heading bold">NUESTRO PORTFOLIO</h1>
 					<hr>
 				</div>
 				<!-- ISO section -->
 				<div class="iso-section">
 					<ul class="filter-wrapper clearfix">
-                   		 <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
+                   		 <li><a href="#" data-filter="*" class="selected opc-main-bg">Todo</a></li>
                    		 <li><a href="#" class="opc-main-bg" data-filter=".html">HTML</a></li>
                    		 <li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
                     	 <li><a href="#" class="opc-main-bg" data-filter=".wordpress">Wordpress</a></li>
@@ -308,7 +308,7 @@
 			<div class="col-md-12 col-sm-12 text-center">
 				<div class="section-title">
 					<strong>05</strong>
-					<h1 class="heading bold">OUR PRICING</h1>
+					<h1 class="heading bold">Nuestros Precios</h1>
 					<hr>
 				</div>
 			</div>
