--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class="icon-compass medium-icon"></i>
-					<h3>HOLA CARACOLA</h3>
+					<h3>SERVICIOS WEB</h3>
 					<hr>
-					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia.</p>
+					<p>¿Necesitas crear un negocio online? ¿Quizás una campaña de crowfunding? ¿Y de marketing online? Déjanos ayudarte con los preparativos.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
 				<i class="icon-chat medium-icon"></i>
@@ -184,10 +184,10 @@
 			</div>
 			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="0.9s">
 				<div class="team-wrapper">
-					<img src="images/team1.jpg" class="img-responsive" alt="team img">
+					<img src="images/team1.png" class="img-responsive" alt="team img">
 						<div class="team-des">
-							<h4>Cindy</h4>
-							<h3>Senior Designer</h3>
+							<h4>Eliana María</h4>
+							<h3>Atención al cliente</h3>
 							<hr>
 							<ul class="social-icon">
 								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
@@ -199,10 +199,10 @@
 			</div>
 			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.3s">
 				<div class="team-wrapper">
-					<img src="images/team2.jpg" class="img-responsive" alt="team img">
+					<img src="images/team2.png" class="img-responsive" alt="team img">
 						<div class="team-des">
-							<h4>Mary</h4>
-							<h3>Core Developer</h3>
+							<h4>Jose Antonio García</h4>
+							<h3>Ingeniero Informático</h3>
 							<hr>
 							<ul class="social-icon">
 								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
@@ -214,10 +214,10 @@
 			</div>
 			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.6s">
 				<div class="team-wrapper">
-					<img src="images/team3.jpg" class="img-responsive" alt="team img">
+					<img src="images/team3.png" class="img-responsive" alt="team img">
 						<div class="team-des">
-							<h4>Linda</h4>
-							<h3>Manager</h3>
+							<h4>Makhtar Diop</h4>
+							<h3>Administración</h3>
 							<hr>
 							<ul class="social-icon">
 								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
@@ -227,7 +227,7 @@
 						</div>
 				</div>
 			</div>
-			<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.6s">
+			<!--<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.6s">
 				<div class="team-wrapper">
 					<img src="images/team4.jpg" class="img-responsive" alt="team img">
 						<div class="team-des">
@@ -241,7 +241,7 @@
 							</ul>
 						</div>
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</div>
 </section>
@@ -317,7 +317,7 @@
 					<div class="plan_title">
 						<i class="icon-mobile medium-icon"></i>
 						<h3>BASIC</h3>
-						<h2>$150 <span>per year</span></h2>
+						<h2>150€ <span>/año</span></h2>
 					</div>
 					<ul>
                     	<li>100 GB Cloud Storage</li>
@@ -325,7 +325,7 @@
 						<li>10 Secured Emails</li>
                         <li>24-hour Support</li>
 					</ul>
-					<button class="btn btn-warning">Get it now</button>
+					<button class="btn btn-warning">Comprar</button>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
@@ -333,7 +333,7 @@
 					<div class="plan_title">
 						<i class="icon-desktop medium-icon"></i>
 						<h3>BUSINESS</h3>
-						<h2>$260 <span>per year</span></h2>
+						<h2>260€ <span>/año</span></h2>
 					</div>
 					<ul>
 						<li>200 GB Cloud Storage</li>
@@ -341,7 +341,7 @@
 						<li>20 Secured Emails</li>
                         <li>30-Minute Support</li>
 					</ul>
-					<button class="btn btn-warning">Take this!</button>
+					<button class="btn btn-warning">Comprar</button>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
@@ -349,7 +349,7 @@
 					<div class="plan_title">
 						<i class="icon-cloud medium-icon"></i>
 						<h3>PROFESSIONAL</h3>
-						<h2>$380 <span>per year</span></h2>
+						<h2>380€ <span>/año</span></h2>
 					</div>
 					<ul>
 						<li>500 GB Cloud Storage</li>
@@ -357,7 +357,7 @@
 						<li>40 Secured Emails</li>
                         <li>Live Support</li>
 					</ul>
-					<button class="btn btn-warning">Buy Now</button>
+					<button class="btn btn-warning">Comprar</button>
 				</div>
 			</div>
 		</div>
